# infrahub-demo

./: .env  .env.example  .infrahub.yml  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .pre-commit-config.yml  .pymarkdown  .yamllint  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION.md  README.md  REFACTORING_ANALYSIS.md  data.json  dc1.sh  docker-compose.override.yml  haproxy.cfg  prometheus.yml  pyproject.toml  schema_protocols.py  tasks.py  test_dc11_rack_designs.sh  test_leaf_interfaces.py  test_reverse_rel.py
.devcontainer/: Dockerfile  devcontainer.json  onCreateCommand.sh  postAttachCommand.sh  postCreateCommand.sh
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: main.yml
bootstrap/: bootstrap.py  bootstrap1.py  bootstrap2.py  bootstrap_false.py  data.py  data_bootstrap.py  data_design.py  data_firewall.py  data_router.py  demo_design.py  demo_firewall.py  demo_router.py  utils.py
checks/: __init__.py  border_leaf.py  capability_guard.py  common.py  datacenter.py  dc.py  debug_paths.py  edge.py  firewall.py  leaf.py  loadbalancer.py  proxy.py  sonic_leaf.py  sonic_spine.py  spine.py  super_spine.py  tor.py  validate_firewall.gql  validate_firewall.py  virtual_fabric.py
computed_attributes/: capacity_summary.py  datacenter_capacity.py
data/: DC-1.yml  DC-4.yml  DC-5.yml  POP-1.yml  POP-2.yml  dc-2.yml  dc-3.yml  eqx-1.yml  eqx-2.yml  test-border-leaf.yml
data/20_cloud/: 00_cloud_providers.yml  01_cloud_accounts.yml  02_topology_clouds.yml  03_topology_cloud_regions.yml  04_topology_cloud_azs.yml  05_cloud_ip_prefixes.yml  06_cloud_ip_addresses.yml  07_cloud_vpcs.yml  08_cloud_internet_gateways.yml  09_cloud_elastic_ips.yml  10_cloud_nat_gateways.yml  11_cloud_route_tables.yml  12_cloud_subnets.yml  13_cloud_security_groups.yml  14_cloud_routes.yml  15_cloud_network_interfaces.yml  16_cloud_instances.yml  17_cloud_load_balancers.yml  18_cloud_network_acls.yml  19_cloud_transit_gateways.yml  20_cloud_customer_gateways.yml  21_cloud_vpn_gateways.yml  22_cloud_vpc_peering.yml  23_cloud_direct_connect.yml  24_cloud_virtual_interfaces.yml
data/DC-1/: 00_topology.yml  01_suites.yml  02_racks.yml
data/DC-6/: 00_topology.yml  01_suites.yml  02_racks.yml
data/DC-7/: 00_device_types.yml  00_topology.yml  01_suites.yml  02_racks.yml  03_servers.yml
data/DC-8/: 00_topology.yml  01_suites.yml  02_racks.yml  03_servers.yml
data/DC-9/: 00_topology.yml  (+3 more)
generators/: __init__.py  common.py  decommission_device.py  decommission_pod.py  endpoint_connectivity.py  generate_dc copy.py  generate_dc.py  generate_fabric copy.py  generate_fabric.py  generate_pod copy.py  generate_pod.py  generate_pop.py  generate_rack.gql  generate_rack.py  generate_segment.py  generate_server.py  helpers.py  models.py  protocols.py  replace_device_type.py  routing.py  schema_protocols.py  topology_dc.gql  types.py  validators.py
menu/: base_menu.yml  menu.yml
model/: ipam.yml  service.yml  topology.yaml
queries/: console_config.gql  dc_firewall_config.gql  dc_leaf_config.gql  dc_oob_config.gql  dc_spine_config.gql  edge_config.gql  firewall_config.gql  leaf_config.gql  placeholder.gql  pop_config.gql  service_network_segment.gql  spine_config.gql  topology_cabling.gql  topology_clab.gql  topology_dc.gql  topology_pop.gql
scenarios/: README.md
scripts/: DEPLOYMENT_EXAMPLES.sh  README.md  bootstrap.sh  cabling.sh  check_dc11_cabling.sh  check_dc11_interfaces.py  clab.sh  config.sh  demo.sh  deploy_dc8_with_servers.sh  deploy_scenario.sh  generate.sh  generate_pydantic_models.py  network_routing.yml  render.sh  repo.sh  routing.yml  test_dc11_cabling.py  test_servers.sh  transform.sh  validate.sh
simulators/: topology.gql
tasks/: __init__.py  data.py  demo.py  dev.py  infra.py
templates/: cisco_pop_router.j2  clab_topology.j2  firewall_config.gql  juniper_srx_config.j2  pop_config.gql  rack.j2
tests/: AGENTS.md  conftest.py  test_check.yml  test_graphql.yml  test_j2_transforms.yml
transforms/: __init__.py  arista_leaf.py  arista_spine.py  border_leaf.py  cisco_leaf.py  cisco_spine.py  cloud_security.py  cloud_vpc_pulumi.py  cloud_vpc_terraform.py  common.py  edge.py  equinix_pop.py  firewall.py  leaf.py  loadbalancer.py  loadbalancer_cloud.py  proxy_onprem.py  proxy_saas.py  sonic_leaf.py  sonic_spine.py  spine.py  super_spine.py  topology_cabling.py  tor.py  vxlan_evpn.py
utils/: __init__.py  data_cleaning.py  task_manager.py
(+1297 files in other folders)
