[project]
authors = [
    {name = "Tomek Zajac", email = "tomek@mastuazi.com"},
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "invoke>=2.2.0,<3.0.0",
    "infrahub-sdk[all]>=1.15.0b0,<2.0.0",
]
name = "infrahub-demo"
version = "0.1.5"
description = "Design driven automation"
readme = "README.md"

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.35.0",
    "infrahub-testcontainers>=1.5.2",
    "invoke>=2.2.1",
    "mypy>=1.15.0",
    "prek>=0.3.0",
    "pytest>=8.3.5,<9.0.0",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.14.8",
    "types-pyyaml>=6.0.12.20250809",
    "yamllint>=1.37.1",
]

[tool.mypy]
pretty = true
ignore_missing_imports = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["untyped_package.*"]
follow_untyped_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
