[project]
authors = [
    {name = "Tomek Zajac", email = "tomek@mastuazi.com"},
]
requires-python = "<3.13,>=3.10"
dependencies = [
    "invoke<3.0.0,>=2.2.0",
    "infrahub-sdk[all]>=1.21.1,<2.0.0",
    "netutils>=1.8.0",
]
name = "infrahub-demo"
version = "0.2.0"
description = "Design driven automation"
readme = "README.md"

[dependency-groups]
dev = [
    "commitizen>=4.0.0",
    "infrahub-testcontainers>=1.5.2",
    "invoke>=2.2.0",
    "isort>=5.13.0",
    "pip-licenses>=4.4.0",
    "prek>=0.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=7.1.0",
    "pytest-dependency>=0.6.0",
    "pytest-order>=1.3.0",
    "ruff>=0.11.4",
    "ty>=0.0.7",
    "yamllint>=1.37.1",
]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
version_scheme = "semver"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_incremental = true
major_version_zero = true

[tool.ruff]
line-length = 120
exclude = [".venv/", ".dev/"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
log_cli = 1
log_cli_level = "INFO"
filterwarnings = [
    "ignore::RuntimeWarning:_pytest.runner",  # Ignore AsyncMock cleanup warnings
]

[tool.pip-licenses]
from = "mixed"
allow-only = '''
MIT;
MIT License;
BSD License;
BSD-2-Clause;
BSD-3-Clause;
BSD-3-Clause AND 0BSD AND MIT AND Zlib AND CC0-1.0;
BSD-3-Clause AND TCL;
Apache Software License;
Apache Software License; BSD License;
Apache Software License; MIT License;
Apache-2.0;
Apache-2.0 AND BSD-2-Clause;
Apache-2.0 AND CNRI-Python;
Apache-2.0 OR GPL-2.0-or-later;
MIT OR Apache-2.0;
ISC;
ISC License (ISCL);
Python Software Foundation License;
PSF-2.0;
Mozilla Public License 2.0 (MPL 2.0);
MPL-2.0 AND (Apache-2.0 OR MIT);
Artistic License; GNU General Public License (GPL); GNU General Public License v2 or later (GPLv2+);
GPL-3.0-or-later
'''
